# alcf-facility-api

./: .dockerignore  .gitignore  Dockerfile.production  entrypoint.sh  gunicorn.config.production.py  pyproject.toml
alcf/: .gitignore  README.md  alcf_adapter.py  config.py  endpoints.py  pyproject.toml  requirements.txt
alcf/account/: alcf_adapter.py
alcf/auth/: alcf_adapter.py  auth.py  keycloak_utils.py  utils.py
alcf/auth/templates/: token.html
alcf/cache/: redis.py
alcf/compute/: alcf_adapter.py  utils_graphql.py
alcf/compute/graphql/: converters.py  models.py  utils.py
alcf/database/: database.py  models.py
alcf/database/ingestion/: drop_and_recreate_tables.py  ingest_activity_data.py  ingest_static_data.py
alcf/facility/: alcf_adapter.py
alcf/filesystem/: alcf_adapter.py  utils.py  validation.py
alcf/globus/: README.md  filesystem_scope.json  utils.py
alcf/globus/functions/: register_ls.py  (+10 more)
alcf/python_example_scripts/: README.md  amsc_globus_access_token.py  common_filesystem.py  compute_cancel_job.py  compute_get_job.py  compute_get_jobs.py  compute_submit_job.py  compute_update_job.py  filesystem_checksum.py  filesystem_chmod.py  filesystem_chown.py  filesystem_file.py  filesystem_head.py  filesystem_ls.py  filesystem_mkdir.py  filesystem_rm.py  filesystem_stat.py  filesystem_tail.py  filesystem_view.py  get_task.py  globus_access_token.py  keycloak_access_token.sh  requirements.txt  simple_globus_access_token.py
alcf/status/: alcf_adapter.py
alcf/task/: alcf_adapter.py  utils.py
alcf/vm_setup/: README.md  default  gunicorn.service
(+13 files in other folders)
